2001-09-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el (w3mhack-examine-modules): Handle `w3m-fsf.el'.

	* w3m.el (w3m-default-coding-system): New option.
	(w3m-decode-buffer): Call `w3m-detect-coding-region' instead of
	`detect-coding-region'.
	(w3m-make-ccl-coding-system): Export it to `w3m-fsf.el'.

	* w3m-xmas.el (coding-system-category): Removed.
	(w3m-detect-coding-region): New function.

	* w3m-om.el (coding-system-category): Removed.
	(w3m-detect-coding-region): New function.

	* w3m-fsf.el: New file.

	* w3m-form.el (w3m-form-default-coding-system): Abolished.
	(w3m-form-make-form-data): Refer `w3m-default-coding-system'
	instead of `w3m-form-default-coding-system'.

	* w3m-e21.el (top): Require `w3m-fsf'.
	(w3m-find-coding-system): Export it to `w3m-fsf.el'.

	* w3m-e20.el (top): Require `w3m-fsf'.
	(w3m-find-coding-system): Export it to `w3m-fsf.el'.

	* w3m.el (w3m-goto-url): Change effect of the 3rd argument
	`charset'.
	(w3m-redisplay-with-charset): Reimplemented.
	(w3m-view-source): Improved to handle `about://header/...'.
	(w3m-about-header): Show title etc.
	(w3m-view-header): Improved to handle `about://source/...'.

2001-09-28  kkonishi <ironbeat@mail.st.rim.or.jp>

	* w3m-search.el (w3m-search-engine-alist): New search engines,
	`excite-ja', `lycos-ja', `altavista' and `freebsd-users-jp'.

2001-09-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-goto-url): Speed up the action to refer a name
	anchor in the same document.

2001-09-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-copy-local-variables): Simplified.
	(w3m-region): Set `w3m-current-base-url'.

	* w3m.el: Fix the bug reported in [emacs-w3m:01564].
	(w3m-current-base-url): New buffer-local variable.
	(w3m-clear-local-variables): Handle `w3m-current-base-url'.
	(w3m-copy-local-variables): Ditto.
	(w3m-attributes): Change spec of return value.
	(w3m-w3m-attributes): Ditto.
	(w3m-local-attributes): Ditto.
	(w3m-base-url): New macro.